--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "cookielib": "^1.1.3",
     "core-js": "^3.6.5",
     "element-ui": "^2.3.6",
     "vue": "^2.6.11",
+    "vue-cookie": "^1.1.4",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
