--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.21.2",
     "cookielib": "^1.1.3",
     "core-js": "^3.6.5",
     "element-ui": "^2.3.6",
